unpackaged/main/default/objects/EquifaxCreditPull__c/EquifaxCreditPull__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>EquifaxCreditPull</label>
</CustomObject>