unpackaged/main/default/objects/EquifaxCreditPull__c/fields/APIKey__c.field-meta.xml
<CustomField>
    <fullName>APIKey__c</fullName>
    <label>APIKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>