unpackaged/main/default/objects/EquifaxCreditPull__c/fields/ContactEndpoint__c.field-meta.xml
<CustomField>
    <fullName>ContactEndpoint__c</fullName>
    <label>ContactEndpoint</label>
    <type>Url</type>
</CustomField>