unpackaged/main/default/objects/EquifaxCreditPull__c/fields/CreditReviewEndpoint__c.field-meta.xml
<CustomField>
    <fullName>CreditReviewEndpoint__c</fullName>
    <label>CreditReviewEndpoint</label>
    <type>Url</type>
</CustomField>