unpackaged/main/default/objects/EquifaxCreditPull__c/fields/LeadEndpoint__c.field-meta.xml
<CustomField>
    <fullName>LeadEndpoint__c</fullName>
    <label>LeadEndpoint</label>
    <type>Url</type>
</CustomField>