unpackaged/main/default/objects/EquifaxCreditPull__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <type>Url</type>
</CustomField>